# TradingAgents

./: .coveragerc  .dockerignore  .env  .env.enterprise.example  .env.example  .env.example.india  .env.sample  .example  .gitattributes  .gitconfig  .gitignore  .gitleaks.toml  .graphify_detect.json  .graphifyignore  .mcp.json  .mise.toml  .pre-commit-config.yaml  .prettierignore  .tsbuildinfo  0323.md  AGENTS.md  API_KEY_MANAGEMENT.md  ARCHITECTURE.md  ARCHITECTURE.md.bak  ARCHITECT_ECONOMIST_REVIEW.md  AUTONOMOUS_README.md  AUTONOMOUS_TRADING_SYSTEM.md  BENCHMARK_DOCS_SYNC.txt  CHANGELOG.md  CHANGELOG_EMBEDDING.md  CHANGELOG_LATEST.md  CHANGES_SUMMARY.md  CLAUDE.md  CODE_CLEANUP_ANALYSIS.md  COMMIT_MESSAGE.txt  CONSTRAINTS.md  Changes.MD  Comandos Trading Agents.docx  DECISIONS.md  DEEPSEEK_CONFIG.md  (+325 more)
.chainlit/: config.toml
.claude/: autorun_gate.sh  batch_state.json  batch_state_testing.json  codebase-readout.md  data_flow.md  improvement-plan.md  launch.json  run_missing_today.sh  settings.json  settings.local.json  skill.md
.claude_code/: mypy_check.sh  python_tools_check.sh  settings.json
.codex/: HANDOFF.md
.git-hooks/: pre-commit
.github/: ISSUES.md  dependabot.yml
.jules/: bolt.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.playwright-mcp/: page-2026-06-22T02-16-52-706Z.yml
.streamlit/: config.toml
DataAnalysisExpert/: repro_nok.py
Docs/: codex_prompts_tradingagents.md  daily_codex_reports_setup_ko.md  tradingagents_codex_bridge_implementation_plan.md
LOGS/: DEV-2026-03-06.md
Standalone-Agent/: news_analyst.py
TrandingAgentsX-View/: index.html
agent_os/: DESIGN.md  README.md
agents/: macro-economic-analyst.md  senior-agentic-architect.md  senior-python-trading-developer.md
alembic/: env.py
analyst_access/: README.md  __init__.py  inspect_run.ipynb  run.py  workbench.py
api/: auth.py  completed_requests.html  config.py  database.py  db.py  main.py  models.py  requirements.txt  scheduler.py  schemas.py  settings.json  signals_engine.py  worker.py
app/: __init__.py  auth.py  config.py  db.py  logging_config.py  main.py  models.py  observability.py
autonomous/: __init__.py  alert_engine.py  data_aggregator.py  ibkr_connector.py  scheduler.py  signal_processor.py
back_test/: compare_benchmark.py  engine.py  policy_config.py  run_backtest.py
backend/: .gitignore  Dockerfile  __main__.py  alembic.ini  main.py  requirements.txt  run.py  run_migration.py  test.py  test_chat.py
briefs/: brief-dashboard-2026-05-02.md  brief-dashboard-phase2-2026-05-02.md  brief-portfolio-intelligence-2026-05-02.md  brief-portfolio-intelligence.md  datatype-sparklines.md  epic-daily-price-records.md  epic-dashboard-v1.md
chat_agent/: app.py
cli/: action_handler.py  alert.py  analysis.py  announcements.py  api_keys.py  backtest_cmd.py  chart_generator.py  chunk_ingest.py  compile_reports.py  config.py  deepdive.py  discovery.py  display.py  forge.py  indian_cli.py  kalshi.py  llm_config.py  main.py  message_buffer.py  mock_trading_commands.py  model_fetcher.py  models.py  morning.py  notion_chart_publisher.py  notion_publisher.py  pdf_generator.py  portfolio_cli.py  portfolio_pdf_generator.py  run_config_report.py  state.py  stats_handler.py  tui.py  user_prefs.py  utils.py
config/: india_market_holidays.yml  scheduled_analysis.example.toml  scheduled_analysis.toml  usage.json  watchlist.yaml
dashboard/: README.md  app.py  index.html  package-lock.json  package.json  report_review.py  requirements.txt  shadow_run_monitor.py  status.example.json
data/: .twitter_cache.json  .twitter_usage.json  shadow_run.db  universe_cache.json
debriefs/: analysis-cards-2026-05-02.md  debrief-dashboard-foundation-2026-05-02.md  debrief-dashboard-phase2-2026-05-02.md  debrief-defuddle-integration-2026-05-03.md  debrief-installation-2026-05-02.md  debrief-prices-epic-2026-05-04.md  debrief-session-2026-05-03.md  debrief-workflow-harden-2026-05-03.md  research-summary-2026-05-02.md
deploy/: README.md  install.sh  uninstall.sh  update.sh
desk_adapter/: diff.py
desk_server/: app.py  runner.py
desktop/: __main__.py  app.py
docker/: docker-compose.yml
docs/: 001_TAFlowStrategy_Implementation.md  002_CLI_Interface_Implementation.md  003_Simulation_Engine_Implementation.md  004_Performance_Metrics_Implementation.md  005_Output_Features_Implementation.md  006_Persistence_Features_Implementation.md  007_Testing_Implementation.md  008_Reddit_Praw_Client_Implementation.md  009_Reddit_Data_Fetcher_Implementation.md  010_Reddit_Cache_Manager_Implementation.md  011_Reddit_CLI_Commands_Implementation.md  012_Reddit_Utils_Compatibility_Layer.md  ADR001.md  (+105 more)
trading_agents_adk/: README.md  config.py  main.py  pyproject.toml
trading_agents_adk/agents/: __init__.py  analysts.py  debate.py  portfolio_manager.py  researchers.py  risk_analysts.py  trader.py
trading_agents_adk/dataflows/: __init__.py
trading_agents_adk/graph/: trading_graph.py
trading_agents_adk/tools/: __init__.py  fundamental_tools.py  market_tools.py  news_tools.py
web/backend/: manage.py  pyproject.toml  requirements.txt  reset_and_run.sh
web/backend/app/: main.py
web/backend/app/api/: deps.py  router.py
web/backend/app/api/endpoints/: analysis.py
web/backend/app/core/: websocket_manager.py
web/backend/app/core/schemas/: analysis.py  profile.py
web/backend/app/domain/: models.py
web/backend/apps/authentication/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
web/backend/apps/authentication/migrations/: 0001_initial.py
web/backend/apps/trading_api/: apps.py  services.py  urls.py  views.py
web/backend/apps/websocket/: __init__.py  apps.py  consumers.py  routing.py  urls.py
web/backend/config/: config.py
web/backend/eval_results/AAPL/TradingAgentsStrategy_logs/: full_states_log.json
web/backend/eval_results/APP/TradingAgentsStrategy_logs/: full_states_log.json
web/backend/eval_results/MSFT/TradingAgentsStrategy_logs/: full_states_log.json
web/backend/tradingagents_web/: asgi.py  settings.py  urls.py  wsgi.py
(+6953 files in other folders)
