[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tradingagents"
version = "0.2.4"
description = "TradingAgents: Multi-Agents LLM Financial Trading Framework"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Upper bounds on the most security-sensitive packages reduce supply-chain
    # risk: a compromised patch release is not pulled in automatically.
    # Bumps require an intentional bump here after a quick review.
    # Bounds are set at the next *major* version so the langchain ecosystem
    # (which moves fast across minor versions) stays internally compatible.
    "langchain-core>=0.3.81,<2.0",
    "backtrader>=1.9.78.123,<2.0",
    "langchain-anthropic>=0.3.15,<2.0",
    "langchain-experimental>=0.3.4,<2.0",
    "langchain-google-genai>=4.0.0,<6.0",
    "langchain-openai>=0.3.23,<2.0",
    "langgraph>=0.4.8,<2.0",
    "langgraph-checkpoint-sqlite>=2.0.0,<3.0",
    "pandas>=2.3.0,<3.0",
    "parsel>=1.10.0,<2.0",
    "pytz>=2025.2",
    "questionary>=2.1.0,<3.0",
    "redis>=6.2.0,<7.0",
    "requests>=2.32.4,<3.0",
    "rich>=14.0.0,<16.0",
    "typer>=0.21.0,<2.0",
    "setuptools>=80.9.0",
    "stockstats>=0.6.5,<1.0",
    "tqdm>=4.67.1,<5.0",
    "typing-extensions>=4.14.0,<5.0",
    "yfinance>=0.2.63,<0.4",
]

[project.scripts]
tradingagents = "cli.main:app"

[tool.setuptools.packages.find]
include = ["tradingagents*", "cli*"]

[tool.setuptools.package-data]
cli = ["static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "unit: fast isolated unit tests",
    "integration: tests requiring external services",
    "smoke: quick sanity-check tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
