[tool.uv]
preview = true

[project]
name = "tradingagents-backend"
version = "0.1.0"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlmodel",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "python-multipart",
    "pydantic[email]",
    "tenacity",
    "aiomysql"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "requests",
]
